#317: Next attempt at getting rid of deprecated new Integer(char)